RESOLVED FIXED40248
[Qt] EditCommandQt.cpp/h have coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40248
Summary [Qt] EditCommandQt.cpp/h have coding-style errors
Anders Bakken
Reported 2010-06-07 11:49:44 PDT
[Qt] EditCommandQt.cpp/h have coding-style errors
Attachments
Patch (2.71 KB, patch)
2010-06-07 11:50 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-06-07 11:50:10 PDT
WebKit Commit Bot
Comment 2 2010-06-09 15:55:25 PDT
Comment on attachment 58062 [details] Patch Clearing flags on attachment: 58062 Committed r60921: <http://trac.webkit.org/changeset/60921>
WebKit Commit Bot
Comment 3 2010-06-09 15:55:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.