2010-06-09  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] EditCommandQt.cpp/h have coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40248

        * WebCoreSupport/EditCommandQt.cpp:
        (EditCommandQt::EditCommandQt):
        (EditCommandQt::~EditCommandQt):
        (EditCommandQt::redo):
        (EditCommandQt::undo):
        * WebCoreSupport/EditCommandQt.h:

Canonical link: https://commits.webkit.org/51936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60921 268f45cc-cd09-0410-ab3c-d52691b4dbfc