WebKit/qt/WebCoreSupport/EditCommandQt.cpp
@@ -27,30 +27,31 @@ EditCommandQt::EditCommandQt(WTF::RefPtr<EditCommand> cmd, QUndoCommand *parent)
 #ifndef QT_NO_UNDOCOMMAND
     QUndoCommand(parent),
 #endif
-    _cmd(cmd), _first(true)
+    m_cmd(cmd), m_first(true)
 {
 }
 
 
-EditCommandQt::~EditCommandQt() {
+EditCommandQt::~EditCommandQt()
+{
 }
 
 
-void EditCommandQt::redo() {
-    if (_first) {
-        _first = false;
+void EditCommandQt::redo()
+{
+    if (m_first) {
+        m_first = false;
         return;
     }
-    if (_cmd) {
-        _cmd->reapply();
-    }
+    if (m_cmd)
+        m_cmd->reapply();
 }
 
 
-void EditCommandQt::undo() {
-    if (_cmd) {
-        _cmd->unapply();
-    }
+void EditCommandQt::undo()
+{
+    if (m_cmd)
+        m_cmd->unapply();
 }
 
 
